[tool.poetry]
name = "flappybirdcv"
version = "0.1.0"
description = "Code to play flappybird a classic game with the opencv"
authors = ["DeepeshKalura <deepeshkalurs@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
opencv-python = "^4.9.0.80"
mediapipe = "^0.10.14"
screeninfo = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
